exports[`actions > commuter generic model actions create should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/group/group-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > commuter generic model actions delete should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/group/group-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > commuter generic model actions update should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/group/group-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
